compiler/src/test/resources/amyc/nameAnalyzer/failing/DuplicateDefs2.amy
object DefNames
  abstract class Foo
  case class Bar() extends Foo

  fn Foo(): Int(32) = { 42 }
end DefNames
